--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -1,103 +1,90 @@
 <!DOCTYPE html>
-<HTML lang="en">
-
-<HEAD>
-    <TITLE>AirBnb Clone</TITLE>
-    <LINK rel="stylesheet" href="static/styles/4-common.css">
-    <LINK rel="stylesheet" href="static/styles/3-header.css">
-    <LINK rel="stylesheet" href="static/styles/3-footer.css">
-    <LINK rel="stylesheet" href="static/styles/6-filters.css">
-    <LINK rel="stylesheet" href="static/styles/8-places.css">
-    <LINK rel="icon" href="static/images/icon.png" type="image/png">
-</HEAD>
-
-<BODY>
-    <HEADER>
-        <DIV class="logo"></DIV>
-    </HEADER>
-    <DIV class="container">
-        <SECTION class="filters">
-            <BUTTON type="button">Search</BUTTON>
-            <DIV class="locations">
-                <H3>States</H3>
-                <H4>&nbsp;</H4>
-                    <UL class="popover">
-                    {% for state in states.values() | sort(attribute="name") %}
-                        <LI><H2>{{ state.name }}</H2></LI>
-                        <LI>
-                            <UL class="popover_l">
-                            {% for city in state.cities | sort(attribute="name") %}
-                            <LI>{{ city.name }}</LI>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="../static/styles/4-common.css">
+    <link rel="stylesheet" href="../static/styles/3-footer.css">
+    <link rel="stylesheet" href="../static/styles/3-header.css">
+    <link rel="stylesheet" href="../static/styles/6-filters.css">
+    <link rel="stylesheet" href="../static/styles/8-places.css">
+    <link rel="icon" href="../static/images/icon.png">
+</head>
+<body>
+    <header>
+        <div class="logo">
+            
+        </div>
+    </header>
+    <div class="container">
+        <section class="filters">
+            <div class="locations">
+                <h3>States</h3>
+                <h4>&nbsp;</h4>
+                <ul class="popover">
+                    {% for state in states|sort(attribute='name') %}
+                    <li>
+                        <h2>{{ state.name }}</h2>
+                        <ul>
+                            {% for city in state.cities|sort(attribute='name') %}
+                            <li>{{ city.name }}</li>
                             {% endfor %}
-                            </UL>
-                        </LI>
+                        </ul>
+                    </li>
                     {% endfor %}
-                  </UL>
-            </DIV>
-            <DIV class="amenities">
-                <H3>Amenities</H3>
-                <H4>&nbsp;</H4>
-                <UL class="popover">
-                {% for amenity in amenities.values() | sort(attribute="name") %}
-                <LI>{{ amenity.name }}</LI>
-                {% endfor %}
-                </UL>
-            </DIV>
-        </SECTION>
-        <SECTION class="places">
-            <DIV class="places_title">
-                <h1>Places</h1>
-            </DIV>
-            <DIV class="articles">
-                {% for place in places.values() | sort(attribute="name") %}
-                <ARTICLE>
-                    <DIV class="price_title">
-                        <DIV class="article_title">
-                            <H2>{{ place.name }}</H2>
-                        </DIV>
-                        <DIV class="price_by_night">
-                            <DIV class="price">
-                                &#36;{{ place.price_by_night }}
-                            </DIV>
-                        </DIV>
-                    </DIV>
-                    <DIV class="information">
-                        <DIV class="max_guest">
-                            <DIV class="guest_icon">
-                            </DIV>
-                            <DIV class="guest_number">
-                                <H2>{{ place.max_guest }} Guests</H2>
-                            </DIV>
-                        </DIV>
-                        <DIV class="number_rooms">
-                            <DIV class="rooms_icon">
-                            </DIV>
-                            <DIV class="rooms_number">
-                                <H2>{{ place.number_rooms }} Rooms</H2>
-                            </DIV>
-                        </DIV>
-                        <DIV class="number_bathrooms">
-                            <DIV class="bathrooms_icon">
-                            </DIV>
-                            <DIV class="bathrooms_number">
-                                <H2>{{ place.number_bathrooms }} Bathrooms</H2>
-                            </DIV>
-                        </DIV>
-                    </DIV>
-                    <DIV class="user">
-                        <b>Owner:</b> {{ place.user.first_name }} {{ place.user.last_name }}
-                    </DIV>
-                    <DIV class="description">
-                        {{ place.description | safe }}
-                    </DIV>
-                </ARTICLE>
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>&nbsp;</h4>
+                <ul class="popover">
+                    {% for amenity in amenities|sort(attribute='name') %}
+                    <li>{{ amenity.name }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <button>
+                Search
+            </button>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            {% for place in places|sort(attribute='name') %}
+            <article>
+                <h2>{{ place.name }}</h2>
+                <div class="price_by_night">
+                    <p>${{ place.price_by_night }}</p>
+                </div>
+                <div class="information">
+                    <div class="max_guest">
+                        <div class="image_guest"></div>
+                        <p>{{ place.max_guest }}</p>
+                    </div>
+                    <div class="number_rooms">
+                        <div class="img_room"></div>
+                        <p>{{ place.number_rooms}}</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <div class="img_bathrooms"></div>
+                        <p>{{ place.number_bathrooms }}</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner: </b>{{ place.user.first_name ~ ' ' ~ place.user.last_name }}</p>
+                </div>
+                <div class="description">
+                    {% autoescape false %}
+                    <p>{{ place.description }}</p>
+                    {% endautoescape %}
+                </div>
+            </article>
             {% endfor %}
-        </DIV>
-        </SECTION>
-    </DIV>
-    <FOOTER>
-        Holberton School
-    </FOOTER>
-</BODY>
-
-</HTML>
+        </section>
+    </div>
+    <footer>
+        <p>
+            Holberton School
+        </p>
+    </footer>
+</body>
+</html>
