--- a/web_flask/templates/8-cities_by_states.html
+++ b/web_flask/templates/8-cities_by_states.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>HBNB</title>
-    </head>
-    <body>
-        <h1>States</h1>
-        <ul>
-          {% for state in states | sort(attribute="name") %}
-         <li>{{ state.id }}: <b>{{ state.name }}</b>
-           <ul>
-              {% for city in state.cities | sort(attribute="name") %}
-              <li>{{ city.id }}: <b>{{ city.name }}</b></li>
-              {% endfor %}
-           </ul>
-          </li>
-          {% endfor %}
-        </ul>
-      </body>
-    </html>
+<HTML lang="en">
+    <HEAD>
+        <TITLE>HBNB</TITLE>
+    </HEAD>
+    <BODY>
+        <H1>States</H1>
+	<UL>
+	    {%- for value in l_list.values()|sort(attribute='name') %}
+	    <li>{{ value.id }}: <B>{{ value.name }}</B>
+		<UL>
+		    {%- for i in value.cities|sort(attribute='name') %}
+		    <li>{{ i.id }}: <B>{{ i.name }}</B></li>
+		    {%- endfor %}
+		</UL>
+	    </li>
+	    {%- endfor %}
+	</UL>
+    </BODY>
+</HTML>
